Bug 405942 - forward slashes in document titles lead to weird kra file structures.
Summary: forward slashes in document titles lead to weird kra file structures.
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: File formats (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2019-03-27 21:17 UTC by wolthera
Modified: 2019-04-04 09:09 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
File that got corrupted this way. (140.02 KB, application/x-krita)
2019-03-27 21:17 UTC, wolthera
Details

Note You need to log in before you can comment on or make changes to this bug.
Description wolthera 2019-03-27 21:17:00 UTC
Created attachment 119091 [details]
File that got corrupted this way.

SUMMARY
Forward slashes in document titles result in weird kra file structure.

STEPS TO REPRODUCE
1. Make a document.
2. Go to document information, type something like blah/end or miauw/woof
3. save.
4. Reopen.

OBSERVED RESULT
Krita will not be able to open the file, because it interpreted the / has a folder slash, and thus create a folder within a folder upon saving.

EXPECTED RESULT
Krita doesn't do any funny business with that slash.
Comment 1 wolthera 2019-03-27 21:21:38 UTC
Also, a complete aside, but when unzipping for some reason all the files were read-only, which was a little weird?
Comment 2 Halla Rempt 2019-04-04 09:09:43 UTC
Git commit 3a4bfb2858415cf6fdec2a7d8e6cef97c2f218a0 by Boudewijn Rempt.
Committed on 04/04/2019 at 09:09.
Pushed by rempt into branch 'master'.

Fix loading kra files with / in the image name
Related: bug 405475

M  +1    -4    libs/store/KoQuaZipStore.cpp
M  +5    -0    libs/store/KoStore.cpp
M  +7    -1    libs/store/KoStore.h
M  +3    -3    plugins/impex/kra/kra_converter.cpp

https://commits.kde.org/krita/3a4bfb2858415cf6fdec2a7d8e6cef97c2f218a0