Fix loading kra files with / in the image name

BUG:405942
CCBUG:405475